--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -57,11 +57,10 @@
     margin-top: -40px;
   }
 
-a {
-    color: #ffffff;
-  }
-
   a:hover {
-    color: #ffffff;
+    color: white;
     text-decoration: none;
+    }
+    a {
+    color: white;
     }
