--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -58,9 +58,10 @@
   }
 
   a:hover {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
     }
-    a {
-    color: white;
+
+  a {
+    color: #ffffff;
     }
