--- a/src/Pages/Training and consultancies/Traindisplay.css
+++ b/src/Pages/Training and consultancies/Traindisplay.css
@@ -1,4 +1,4 @@
-.header-pic {
+.header1 {
     background-image: url("../../Assets/_MG_0936\ 1.png");
     background-size: cover;
     background-position: center center;
