--- a/src/Pages/Training and consultancies/Traindisplay.css
+++ b/src/Pages/Training and consultancies/Traindisplay.css
@@ -1,5 +1,5 @@
 .header1 {
-    background-image: url("../../Assets/_MG_0936 1.png");
+    background-image: url("../../Assets/Trainingbanner.png");
     background-size: cover;
     background-position: center center;
     padding: 20% !important;
