--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -43,7 +43,7 @@
     }
 
 
-    .Bianer {
+    /* .Bianer {
       border: 0px solid orange;
       background-color: #000000;
       width: 200px;
@@ -72,7 +72,7 @@
       top: 250vh;
        left: -70px;
        transform: rotate(270deg);
-    }
+    } */
 
 .contain {
   position: relative;
