--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -39,6 +39,7 @@ font-weight: normal;
 font-size: 13px;
 line-height: 18px;
 color: #FFFFFF;
+padding-left: 0;
 }
 .text-uppercase {
 font-family: Carmen Sans;
