--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -18,10 +18,10 @@
   border-top: 2px solid #f8f8f8;
 }
 
-/* .pt-4,
+.pt-4,
 .py-4 {
-  padding-top: 102px !important;
-} */
+  padding-top: 0 !important;
+}
 
 .row {
     padding-bottom: 17px;
