--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -82,3 +82,14 @@
   position: relative;
 }
 
+
+
+.container-bg {
+  background-color: #E1E1E1;
+  padding-top: 10%;
+  padding-bottom: 1px;
+  }
+
+  .Fi-region {
+    margin-bottom: 5rem;
+    }
