--- a/src/Pages/Procurement  Services/Procurement.css
+++ b/src/Pages/Procurement  Services/Procurement.css
@@ -26,3 +26,8 @@
     right: 5px;
   }
   
+  .container-bg {
+    background-color: #E1E1E1;
+    padding-top: 10%;
+    padding-bottom: 1px;
+    }
