--- a/src/Pages/Product and Services/Product.css
+++ b/src/Pages/Product and Services/Product.css
@@ -7,6 +7,12 @@
 
 .head-1 {
     color: white;
+    font-family: Carmen Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 50px;
+    text-align: center;
 }
 
 .para-1 {
@@ -15,3 +21,12 @@
     top: 250px;
 }
 
+.head-2 {
+    color: white;
+    font-family: Carmen Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+}
