--- a/src/Includes/style/fontsStyle.css
+++ b/src/Includes/style/fontsStyle.css
@@ -79,3 +79,15 @@ font-family: "Carmen Sans";
 font-style: normal;
 font-weight: normal;
 }
+
+b {
+
+  font-family: Carmen Sans;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  
+  color: #FEFEFE;
+}
