--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -88,6 +88,7 @@
   background-color: #E1E1E1;
   padding-top: 10%;
   padding-bottom: 1px;
+  margin-bottom: 0px !important;
   }
 
   .Fi-region {
