--- a/src/Pages/Product and Services/Product.css
+++ b/src/Pages/Product and Services/Product.css
@@ -19,6 +19,12 @@
     color: white;
     position: relative;
     top: 250px;
+    font-family: Carmen Sans;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
 }
 
 .head-2 {
