--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -88,6 +88,7 @@ text-transform: uppercase;
       .foot-head span {
         display: block;
         margin-bottom: 20px;
+        margin-right: 0px;
         }
 
         .foot-head > span:nth-child(2) {
