--- a/src/Pages/Product and Services/Product.css
+++ b/src/Pages/Product and Services/Product.css
@@ -41,7 +41,7 @@
         }
         .header-pic {
 
-            padding: 2rem 1rem;
+            padding: 2rem 1rem !important;
             background-position: center;
             }
 }
