--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -94,3 +94,13 @@
     margin-bottom: 5rem;
     }
 
+@media (max-width: 480px) {
+  .pixel {
+    padding-top: 12%;
+    }
+
+    .head1 {
+
+      margin-top: 3rem;
+      }
+}
