--- a/src/Pages/Training and consultancies/Traindisplay.css
+++ b/src/Pages/Training and consultancies/Traindisplay.css
@@ -24,3 +24,11 @@
     line-height: 50px;
     text-align: center;
 }
+
+@media (max-width: 480px) {
+    .header-pic {
+
+        padding: 2rem 1rem !important;
+        background-position: center;
+        }
+}
