--- a/src/Pages/Training and consultancies/Traindisplay.css
+++ b/src/Pages/Training and consultancies/Traindisplay.css
@@ -26,7 +26,7 @@
 }
 
 @media (max-width: 480px) {
-    .header-pic {
+    .header1 {
 
         padding: 2rem 1rem !important;
         background-position: center;
