--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -74,11 +74,13 @@
        transform: rotate(270deg);
     }
 
-.contain {
-  position: relative;
+.Bianer {
+  top: 39%;
 }
 
-
+.Bianer2 {
+  top: 58%;
+}
 
 
 
