--- a/src/Includes/style/fontsStyle.css
+++ b/src/Includes/style/fontsStyle.css
@@ -73,7 +73,7 @@ p {
 small {
   font-family: "Carmen Sans";
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 11px;
   line-height: 10px;
   text-align: center;
