--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -36,43 +36,46 @@
 
 .col-lg-6.page-image {
   pointer-events: none;
-  }
-  
-  .head1 {
-    margin-top: 17rem;
-    }
+}
 
+.head1 {
+  margin-top: 17rem;
+}
 
-      .Bianer {
-      border: 0px solid orange;
-      background-color: #000000;
-      width: 200px;
-      float: left;
-      position: absolute;
-      height: 60px;
-      color: antiquewhite;
-      padding-top: 2px;
-      text-align: center;
-      text-align-last: center;
-      top: 162vh;
-       left: -70px;
-       transform: rotate(270deg);
-    }
-    .Bianer2 {
-      border: 0px solid orange;
-      background-color: #000000;
-      width: 200px;
-      float: left;
-      position: absolute;
-      height: 60px;
-      color: antiquewhite;
-      padding-top: 2px;
-      text-align: center;
-      text-align-last: center;
-      top: 250vh;
-       left: -70px;
-       transform: rotate(270deg);
-    }
+.Bianer {
+  border: 0px solid orange;
+  background-color: #000000;
+  float: left;
+  position: absolute;
+  height: 60px;
+  color: antiquewhite;
+  text-align: center;
+  text-align-last: center;
+  top: 162vh;
+  left: -70px;
+  transform: rotate(270deg);
+  width: 180px;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.Bianer2 {
+  border: 0px solid orange;
+  background-color: #000000;
+  float: left;
+  position: absolute;
+  height: 60px;
+  color: antiquewhite;
+  text-align: center;
+  text-align-last: center;
+  top: 250vh;
+  left: -70px;
+  transform: rotate(270deg);
+  width: 180px;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 .Bianer {
   top: 38%;
@@ -87,30 +90,29 @@
 }
 
 .container-bg {
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
   padding-top: 10%;
   padding-bottom: 1px;
-  }
+}
 
-  .Fi-region {
-    margin-bottom: 5rem;
-    width: auto !important;
-    }
+.Fi-region {
+  margin-bottom: 5rem;
+  width: auto !important;
+}
 
 @media (max-width: 480px) {
   .pixel {
     padding-top: 12%;
-    }
+  }
 
-    .head1 {
-
-      margin-top: 3rem;
-      }
-      .left-slider .slick-slider {
-        margin-top: 16%;
-      }
+  .head1 {
+    margin-top: 3rem;
+  }
+  .left-slider .slick-slider {
+    margin-top: 16%;
+  }
 }
 
 .bg {
   padding-top: 8%;
-  }
+}
