--- a/src/Pages/Home/Info.css
+++ b/src/Pages/Home/Info.css
@@ -28,8 +28,8 @@
   font-size: 16px;
   line-height: 18px;
   color: #000000;
-  text-align: justify;
-  text-align-last: center;
+  /* text-align: justify;
+  text-align-last: center; */
   padding-top: 20px;
 }
 
