--- a/src/Pages/Home/Info.css
+++ b/src/Pages/Home/Info.css
@@ -23,7 +23,7 @@
   border: 1px solid gray;
 }
 .page-text {
-  font-family: Roboto;
+  font-family: Carmen Sans;
   font-weight: normal;
   font-size: 16px;
   line-height: 18px;
