--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -102,3 +102,78 @@ a {
 .colored a {
   color: #000000 !important;
 }
+
+.dropdown-wrap {
+  position: relative;
+}
+
+.d-item-list {
+  list-style: none;
+  text-align: left;
+  position: absolute;
+  padding-left: 0;
+  top: 25px;
+  width: 185px;
+  background-color: #000;
+  padding: 16px;
+  opacity: 0;
+  transition: opacity 500ms;
+}
+
+.dropbtn {
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 212px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 22px;
+  height: 100px;
+}
+
+.dropdown-content a {
+  color: black !important;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: none;
+}
+
+.border-set {
+  border: 1px solid #eaeaea;
+  width: 228px;
+}
+
+.icon-set {
+  margin-bottom: 7px;
+  margin-left: -22px;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1.5rem;
+  }
+}
