--- a/src/Pages/Home/Info.css
+++ b/src/Pages/Home/Info.css
@@ -224,3 +224,45 @@
   text-align: justify;
   color: #000000;
 }
+
+.carousel-indicators,
+.carousel-indicators li {
+  display: none;
+}
+
+.carousel-control-prev-icon {
+  visibility: hidden;
+}
+
+.carousel-control-prev {
+  display: none;
+}
+
+.carousel-control-next-icon {
+  border: 0.5px solid #000000;
+  width: 18.86px;
+  height: 37.71px;
+  padding: 10px;
+}
+
+.carousel-control-prev {
+  left: -100px !important;
+}
+
+.carousel-control-next {
+  right: -100px !important;
+}
+
+.carousel {
+  min-height: 808px !important;
+}
+
+.img-box .img-fluid {
+  max-width: 70%;
+}
+
+.grid-button:hover {
+  color: black !important;
+  background-color: #fff !important;
+  border-color: white !important;
+}
