--- a/src/Pages/Product and Services/Services.css
+++ b/src/Pages/Product and Services/Services.css
@@ -139,3 +139,9 @@
   padding: 0 5px;
   border-bottom: 1px solid #707070;
 }
+
+.button-content:hover {
+  color: white !important;
+  background-color: black !important;
+  border: black !important;
+}
