--- a/src/Pages/Home/Info.css
+++ b/src/Pages/Home/Info.css
@@ -13,11 +13,10 @@
   margin-top: 20px;
 }
 
-.background-img {
-  background-color: black;
+/* .background-img {
   padding: 5%;
   margin: 8%;
-}
+} */
 .main-heading small {
   font-family: Carmen Sans;
   font-style: normal;
@@ -231,7 +230,10 @@
 }
 
 .carousel-control-prev-icon {
-  visibility: hidden;
+  border: 0.5px solid #000000;
+  width: 18.86px;
+  height: 26.71px;
+  padding: 10px;
 }
 
 .carousel-control-prev {
