--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -22,7 +22,7 @@
   font-weight: 300;
   font-size: 14px;
   line-height: 13px;
-  text-align: center;
+  /* text-align: center; */
   border: none;
   border-bottom: 1px solid #fff;
   color: white;
